[package]
name = "{{project-name}}"
version = "0.1.0"
homepage = "https://github.com/tevador/RandomX/"
authors = [
    "{{authors}}",
    "aggstam",
    "tevador <tevador@gmail.com>",
    "The Monero Project",
]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.54"
